# DCARP-FLA

./: CMakeLists.txt  Readme.md  acronyms  ana_lor.py  ana_lor_dis.py  fla.cpp  fla.h  globalvar.cpp  globalvar.h  main.cpp  plot_autoc.py  plot_lor.py  settings  settingslabels
instance/egl-e2-A-0/: instance1.xml  instance10.xml  instance11.xml  instance12.xml  instance13.xml  instance14.xml  instance15.xml  instance16.xml  instance17.xml  instance18.xml  instance19.xml  instance2.xml  instance20.xml  instance21.xml  instance22.xml  instance23.xml  instance24.xml  instance25.xml  instance26.xml  instance27.xml  instance28.xml  instance29.xml  instance3.xml  instance30.xml  instance31.xml  instance32.xml  instance33.xml  instance34.xml  instance35.xml  instance36.xml  instance37.xml  instance38.xml  instance39.xml  instance4.xml  instance40.xml  instance41.xml  instance42.xml  instance43.xml  instance44.xml  instance45.xml  (+24 more)
instance/egl-e2-A-1/: instance1.xml  instance10.xml  instance11.xml  instance12.xml  instance13.xml  instance14.xml  instance15.xml  instance16.xml  instance17.xml  instance18.xml  instance19.xml  instance2.xml  instance20.xml  instance21.xml  instance22.xml  instance23.xml  instance24.xml  instance25.xml  instance26.xml  instance27.xml  instance28.xml  instance29.xml  instance3.xml  instance30.xml  instance31.xml  instance32.xml  instance33.xml  instance34.xml  instance35.xml  instance36.xml  instance37.xml  (+33 more)
ls/: ls.cpp  ls.h  myls.cpp  mylsop.cpp
src/: arrayoperations.cpp  calcost.cpp  heuristic.cpp  readmap.cpp  src.h  virtualtask.cpp
(+1150 files in other folders)
